# iot-projects

i2c-1602-lcd/: i1c-example.c  lcd_constants.h
ledhb/: CMakeLists.txt  ledhb.c
sos/: CMakeLists.txt  sos.c
